--- a/style.css
+++ b/style.css
@@ -7,14 +7,57 @@
     font-family: 'Roboto', sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
+p {
+    line-height: 1.5;
+    font-size: 16px;
+}
+
+button {
+    cursor: pointer;
+}
 
 li {
     list-style-type: none;
 }
 
+.container  {
+    padding: 50px 0;
+}
+
+.row {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 12px;
+}
+
+.click {
+    transition: all 300ms ease;
+}
+
+.click:hover {
+transform: scale(1.1);
+}
+
+.click:active {
+    transform: scale(0.8);
+    }
+
 section {
     background-color: rgb(245, 245, 245);
 }
+
+.title {
+ font-size: 100px;
+ margin-bottom: 12px;
+ text-align: left;
+ line-height: 1;
+}
+
 
 /* 
 
@@ -33,12 +76,80 @@ LANDING PAGE
     transform: translate(-50%, -50%);
     width: 100%;
     max-width: 1000px;
+    padding-left: 30px;
 }
 
+.header__para {
+    font-size: 20px;
+    line-height: 2;
+    max-width: 450px;
+}
 
+.social__list {
+    margin-top: 16px;
+    display: flex;
+}
 
+.social__link {
+    background-color: #FF6500;
+    color: white;
+    font-size: 14px;
+    padding: 6px;
+    height: 32px;
+    width: 32px;
+    margin-right: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
 
+.mail__btn {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    background-color: #242424;
+    color: white;
+    position: absolute;
+    bottom: 32px;
+    right: 40px;
+}
 
+.scroll {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.scroll__icon {
+    width: 20px;
+    height: 30px;
+    border: 2px solid #242424;
+    border-radius: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.scroll__icon:after {
+    content: "";
+    background-color: #242424;
+    width: 4px;
+    height: 6px;
+    border-radius: 2px;
+    animation: scroll 1000ms infinite alternate-reverse;
+}
+
+@keyframes scroll {
+    0% {
+        transform: translateY(3px)
+    }
+    100% {
+        transform: translateY(-3px);
+    }
+}
 
 /* 
 
@@ -53,6 +164,8 @@ nav {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 20px;
+    height: 100px;
 }
 
 #personal-logo {
@@ -76,6 +189,22 @@ nav {
     font-weight: 700;
 }
 
-.fa-adjust {
+.fa-solid {
     font-size: 20px;
+}
+
+.orange {
+    color: #FF6500;
+}
+
+/* 
+
+Projects 
+
+*/
+
+.section__title {
+    text-align: center;
+    font-size: 48px;
+    margin-bottom: 60px;
 }
