--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ li {
 }
 
 .container  {
+    width: 100%;
     padding: 50px 0;
 }
 
@@ -207,4 +208,106 @@ Projects
     text-align: center;
     font-size: 48px;
     margin-bottom: 60px;
+}
+
+.project__img {
+    width: 100%;
+    transition: all 450ms ease;
+}
+
+.project__wrapper {
+    position: relative;
+    border-radius: 20px;
+    box-shadow: 0px 20px 80px 0px rgb(0, 0, 0, 0.45);
+    overflow: hidden;
+}
+
+.project__description {
+    position: absolute;
+    top: 50%;
+    left: 90px;
+    transform: translateY(100%);
+    opacity: 0;
+    transition: opacity 300ms, transform 450ms ease;
+    color: white;
+    max-width: 550px;
+}
+
+.project__wrapper--bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1c1d25;
+    opacity: 0;
+    transition: all 450ms ease;
+}
+.project__description--title {
+    font-size: 40px;
+
+}
+
+.project__description--link {
+    color: white;
+    font-size: 20px;
+    margin-right: 16px;
+}
+
+.project__description--para {
+    margin: 16px 0;
+}
+
+.project__description--sub-title {
+    margin-top: 8px;
+}
+
+.project__wrapper:hover .project__description {
+    opacity: 1;
+    transform: translateY(-50%);
+}
+
+.project__wrapper:hover .project__img {
+    transform: scale(1.07);
+    filter: blur(5px);
+}
+
+.project__wrapper:hover .project__wrapper--bg {
+    opacity: 0.7;
+}
+
+/* 
+
+FOOTER
+
+*/
+
+footer {
+    background-color: #242424;
+    display: flex;
+    padding: 6% 0;
+}
+
+.footer__row {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+}
+
+.footer__logo--img {
+    width: 70px;
+
+}
+
+.footer__social--link, 
+.footer__copyright {
+    color: white;
+}
+
+.footer__social--list {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    max-width: 500px;
+    margin: 28px 0px;
 }
