--- a/style.css
+++ b/style.css
@@ -59,6 +59,32 @@ section {
  line-height: 1;
 }
 
+.link__hover-effect {
+    position: relative;
+}
+
+.link__hover-effect:after {
+    content: "";
+    position: absolute;
+    bottom: -3px;
+    height: 3px;
+    width: 0;
+    right: 0;
+    transition: all 300ms ease;
+}
+
+.link__hover-effect:hover:after {
+    left: 0;
+    width: 100%;
+}
+
+.link__hover-effect--white:after {
+    background-color: white;
+}
+
+.link__hover-effect--black:after {
+    background-color: black;
+}
 
 /* 
 
@@ -200,6 +226,27 @@ nav {
 
 /* 
 
+MODAL 
+
+*/
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    max-width: 1100px;
+    height: 700px;
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.4);
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+
+
+/* 
+
 Projects 
 
 */
@@ -214,6 +261,7 @@ Projects
     width: 100%;
     transition: all 450ms ease;
 }
+
 
 .project__wrapper {
     position: relative;
