--- a/style.css
+++ b/style.css
@@ -242,15 +242,18 @@ MODAL
     border-radius: 20px;
     overflow: hidden;
     display: flex;
-    
 }
 
 .modal__half {
     width: 50%;
+    padding: 40px 72px;
 }
 
 .modal__about {
     background-color: rgb(245, 245, 245);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .modal__contact {
@@ -258,6 +261,53 @@ MODAL
     color: white;
 }
 
+.modal__languages {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.modal__language {
+    width: 25%;
+    padding: 16px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: all 300ms ease;
+}
+
+.modal__language:hover {
+    filter: brightness(80%);
+    transform: scale(0.9);
+}
+
+.modal__language:hover .language__name {
+transform: scale(1);
+}
+
+.language__name {
+    position: absolute;
+    bottom: -10px;
+    transform: scale(0);
+    transition: all 300ms ease;
+}
+
+.modal__language--img {
+    width: 100%;
+}
+
+.modal__title {
+    font-size: 26px;
+}
+
+.modal_sub-title {
+    margin: 12px 0px 24px 0px;
+}
+
+.modal__para {
+    margin-bottom: 12px;
+    line-height: 1.75;
+}
 
 /* 
 
